# map-to-europass-credential

./: Cargo.toml  README.md
src/: controlled_vocabularies.rs  europass_credential.rs  europass_learning_model.rs  european_qualifications_framework.rs  lib.rs  national_qualification_frameworks.rs  sisu_attainment.rs
