[package]
name = "sisu_attainment_to_europass_credential_map"
version = "0.1.0"
authors = ["Santtu Söderholm <santtu.soderholm@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
